<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>

    
    <string name="hello_world">Hello world!</string><string name="app_name">QRiMS</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_page">QRiMS</string>
    <string name="hello">Hello We Welcomes you!</string>
    <string name="bgimage">Background</string>
    <string name="login">Login Now</string>
    <string name="digital_clock">Digital Clock</string>
    <string name="username">Username</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>    
    <string name="cancel">Cancel</string>
    <string name="date">date</string>
    <string name="today">Today</string>
    <string name="item_name">Item Name</string>
    <string name="copyright">Copyright \u00A9  All Rights Reserved</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="tax_percentage">Tax Percentage</string>
    <string name="compliment_items">Compliment Articles</string>
    <string name="generate_qr_title">Enter the following details \n to generate QR</string>
    <string name="generate_qr">Generate QR</string>
    <string name="compliments">Compliments</string>
    <string name="login_intro">Enter following Login Credentials</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="server_ip">Enter Server\'s IP</string>
    <string name="ip">192.168.1.4</string>
    <string name="Upload">upload</string>
    <string name="update">Update</string>
    <string name="change_password_intro">Enter following credentials to change Password</string>
    <string name="super_market_name">Super Market Name</string>
    <string name="adress_supermarket">Address of Supermarket</string>
    <string name="ph_supermarket">Phone numbers of Supermarket</string>
    <string name="prompt_qty">Enter Quantity of product</string>

</resources>
