<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical" 
    >

    <EditText
        android:id="@+id/serveripET"
        style="@style/editText"
        android:hint="@string/server_ip"
        android:text="@string/ip" >
    </EditText>

    <EditText
        android:id="@+id/superMarketNameET"
        style="@style/editText"
        android:hint="@string/super_market_name" >

    </EditText>

    <EditText
        android:id="@+id/addressET"
        style="@style/editText"
        android:hint="@string/adress_supermarket" >
    </EditText>

    <EditText
        android:id="@+id/phoneNumberET"
        style="@style/editText"
        android:hint="@string/ph_supermarket" >

     </EditText>

    <Button
        android:id="@+id/okB"
        style="@style/button"
        android:text="@string/update" />

    <Button
        android:id="@+id/cancelB"
        style="@style/button"
        android:text="@string/cancel" />

</LinearLayout>