<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/changePasswordIntroTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/change_password_intro"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/currentPasswordET"
        style="@style/editText"
        android:hint="@string/current_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/newpasswordET"
        style="@style/editText"
        android:hint="@string/new_password" 
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirmNewpasswordET"
        style="@style/editText"
        android:hint="@string/confirm_new_password" 
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/update"
        style="@style/button"
        android:text="@string/update" />

 </LinearLayout>