<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bg">

    <LinearLayout  
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/generateQRTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/generate_qr_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/itemNameSP"
            android:layout_width="match_parent"
            android:layout_height="54dp" />

        <EditText
            android:id="@+id/priceET"
			style="@style/editText"
            android:hint="@string/price"
            android:inputType="number" />

        <EditText
            android:id="@+id/discountET"
            style="@style/editText"
            android:hint="@string/discount"
            android:inputType="number" />

        <EditText
            android:id="@+id/taxPercentageET"
            style="@style/editText"
            android:hint="@string/tax_percentage"
            android:inputType="number" />

        <EditText
            android:id="@+id/complimentsET"
            style="@style/editText"
            android:hint="@string/compliments"
            android:inputType="text" />

        <Button
            android:id="@+id/generateQRB"
            style="@style/button"
            android:text="@string/generate_qr" />
    </LinearLayout>

</ScrollView>