<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" 
    android:padding="10dp">

    <TextView
        android:id="@+id/loginintroTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_intro"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/unameET"
		style="@style/editText"
        android:inputType="text"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/passwdET"
        style="@style/editText"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/okB"
		style="@style/button"
        android:text="@string/ok" />

</LinearLayout>