<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="30dp" >

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/copyrightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:text="@string/copyright" />

    <DigitalClock
        android:id="@+id/digitalClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dateTV"
        android:layout_alignBottom="@+id/dateTV"
        android:layout_alignRight="@+id/copyrightTV"
        android:text="@string/digital_clock" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:src="@drawable/companylogo"
        android:contentDescription="@string/app_name"/>

    <Button
        android:id="@+id/loginB"
        style="@style/MyCustomButton"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/copyrightTV"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="@string/login" />

</RelativeLayout>
